fixed typos so that each question is displayed

--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="Assets/css/style.css" />
     <link rel="stylesheet" href="Assets/css/game.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -13,9 +14,6 @@
         <div id="hud">
           <div class="hud-item">
             <p id="progressText" class="hud-prefix">Question</p>
-            <div id="progressbar">
-              <div id="progressBarFull"></div>
-            </div>
           </div>
           <div class="hud-item">
             <p class="hud-prefix">Timer</p>
