added conditions for right and wrong inner text content

--- a/game.html
+++ b/game.html
@@ -41,6 +41,7 @@
           <p class="choice-prefix">D. </p>
           <p class="choice-text" data-number="4">Choice 4</p>
         </div>
+        <div id="choice-result"></div>
       </div>
     </div>
     <script src="Assets/js/script.js"></script>
