--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >
       </div>
     </div>
-    <script src="Assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
   
 </html>
