--- a/end.html
+++ b/end.html
@@ -26,6 +26,6 @@
             </h1>
         </div>
     </div>
-    <script src="Assets/js/end.js"></script>
+    <script src="assets/js/end.js"></script>
 </body>
 </html>
