--- a/game.html
+++ b/game.html
@@ -44,6 +44,6 @@
         <div id="choice-result"></div>
       </div>
     </div>
-    <script src="Assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
