fixed the relative path syntax

--- a/highscores.html
+++ b/highscores.html
@@ -23,6 +23,6 @@
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="assets/js/highscores.js"></script>
+    <script src="./assets/js/highscores.js"></script>
 </body>
 </html>
