--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div id="home" class="flex-column flex-center">
         <h1>Power Quiz</h1>
         <h2>Based On Robert Greene's "Power"</h2>
-        <a href="/game.html" id="start-btn" class="start-btn btn">Start</a>
-        <a href="/highscores.html" id="highscore-btn" class="highscore-btn btn"
+        <a href="./game.html" id="start-btn" class="start-btn btn">Start</a>
+        <a href="./highscores.html" id="highscore-btn" class="highscore-btn btn"
           >High Scores</a
         >
       </div>
     </div>
-    <script src="assets/js/script.js"></script>
+    <!-- <script src="assets/js/script.js"></script> -->
   </body>
   
 </html>
