--- a/highscores.html
+++ b/highscores.html
@@ -20,7 +20,7 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/" class="btn">Go Home</a>
+            <a href="./" class="btn">Go Home</a>
         </div>
     </div>
     <script src="./assets/js/highscores.js"></script>
